--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "magentaTutorial.js",
+  "main": "index.js",
   "scripts": {
     "start": "NODE_PATH=./build node build/src/index.js",
     "build": "tsc -p .",
@@ -17,13 +17,10 @@
     "fs": "^0.0.1-security",
     "jest": "^27.2.4",
     "node-aplay": "^1.0.3",
-    "sound-play": "^1.1.0",
-    "ts-node": "^10.2.1",
-    "webmidi": "^3.0.0-alpha.5"
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
-    "@types/sound-play": "^1.1.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3"
   },
