--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/jest": "^27.0.2",
     "fs": "^0.0.1-security",
     "jest": "^27.2.4",
+    "johnny-five": "^2.1.0",
     "node-aplay": "^1.0.3",
+    "node-pixel": "^0.11.0",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
